| PS  | 1.7.8.7           | ✔   | ❌   | ❌   | Fatal runtime errors      |
| VM  | 4.0.4             | ✔   | ✔   | ✔   |                           |
| WC  | 7.1.0             | ✔   | ✔   | ❓   | Many warnings from other plugins |


7.6.0 (202?-??-??)
------------------
Bugs:
- We do no longer throw an exception when the HTTP status code and the response
  status are inconsistent. The Acumulus API does contain inconsistencies.  


7.5.0 (2022-12-09)
------------------
Requirements:
- PHP 7.4 is now the minimally required version.
- PHP 8.0 and 8.1 have been tested and do work.
- PHP 8.2 has not yet been tested.

Features:
- ALL: The "About" block on our forms will show fewer sections when the account
  data has not yet been completed or is incorrect. This prevents duplicate
  messages saying "no contract data yet".
- MA: Added buttons to the invoice status screen to mail the Acumulus invoice or
  packing slip.
- ALL: The messages on the batch form are now more precise and clearer.
- WC: Support for the WooCommerce EU VAT Number plugin.

Bugs:
- MA2.4: Finally tested with Magento 2.4 and PHP 8.1. Below the findings:
- MA: <details> sections could not be opened and remained closed.
- MA: config form: Error: Payment model name is not provided in config!
- MA: Automatically sending invoice data to Acumulus on Magento invoice
  creation (instead of order status change) did not work.
- MA: TypeError: Siel\Acumulus\Helpers\Number::isZero(): Argument #1 ($f1) must
  be of type float, null given.
- MA: Our severity "exception" had no mapping to a Magento severity.
- MA: ResourceCollection instance for Acumulus entries was reused instead of
  recreated, leading to same results being returned for each subsequent query.
- MA: ResourceCollection instances for orders or credit notes were reused
  instead of recreated, leading to same results being returned for each
  subsequent query.
- ALL: Edge case: If an order has no order lines, an invoice without invoice